--- a/Projects/commerce/auctions/static/auctions/styles.css
+++ b/Projects/commerce/auctions/static/auctions/styles.css
@@ -4,6 +4,11 @@ body {
     padding: 0;
     background-color: #f3f3f3;
 }
+
+.page-heading{
+    display: inline-block;
+}
+
 :root{
     --uranian-blue: #add7f6ff;
     --jordy-blue: #87bfffff;
